--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
             <div id="forecast" class="forecast-container"></div>
         </div>
     </div>
-    <script src="scripts/jweather.js" type="module"></script>
+    <script src="scripts/jweather.js"></script>
 </body>
 </html>
