--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
             </div>
             <button id="searchButton">Отримати прогноз</button>
         </div>
+        <!-- Додаємо секцію історії -->
+        <div class="search-history">
+            <h3>Історія пошуку</h3>
+            <div id="historyList" class="history-list"></div>
+        </div>
         <div class="weather-info">
             <div id="currentWeather" class="weather-card"></div>
             <div id="forecast" class="forecast-container"></div>
